<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical">

    <include
        android:id="@+id/toolBar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:background="@color/primary"
                android:padding="10dp"
                android:src="@drawable/ic_action_code" />

            <EditText
                android:id="@+id/scratchCodeText"
                style="@style/searchEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/white"
                android:hint="@string/enter_scratch_code" />

            <Button
                android:id="@+id/btnScratch"
                style="@style/btn_primary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/proceed" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/app_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:text="@string/dont_have_scratch_code"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/buyScratchCode"
        style="@style/app_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/buy_scratchcode"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/or"
        style="@style/app_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyScratchCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/or"
        android:visibility="gone"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/forgotScratchCode"
        style="@style/app_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/forgot_scratch_code"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/freeTrialBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorAccent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_remaining_days"
            style="@style/app_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/free_trial"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:padding="3dp"
            android:src="@drawable/right" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_action_otp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scratch_code_text"
        android:id="@+id/textView7"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"/>
</RelativeLayout>